--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:id="@+id/activity_main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    style="@style/AppTheme.ActionBar.Transparent"
+    android:fitsSystemWindows="@bool/fitsSystemWindows"
     tools:context=".MainActivity">
     
     <android.support.constraint.ConstraintLayout
@@ -19,8 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
             android:elevation="4dp"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
@@ -45,8 +47,8 @@
         app:itemTextColor="@color/black_textviews"
         app:itemIconTint="#757575"
         app:menu="@menu/drawermenu"
-        android:fitsSystemWindows="true"
-        style="@style/AppTheme.ActionBar.Transparent"
+        app:theme="@style/NavigationViewTheme"
+        android:fitsSystemWindows="@bool/fitsSystemWindows"
         android:layout_gravity="start"
         ></android.support.design.widget.NavigationView>
 
