--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/mount7"
+        android:src="@drawable/madagascar"
         />
 
     <View
@@ -28,7 +28,8 @@
         android:text="Cб, 13 Фев, 19:00"
         android:textColor="#b8bfc5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/header_event_name"
@@ -36,7 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/roboto_medium"
@@ -48,7 +51,8 @@
         app:layout_constraintBottom_toTopOf="@+id/header_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_date" />
+        app:layout_constraintTop_toBottomOf="@+id/header_date"
+        android:gravity="start" />
 
     <TextView
         android:id="@+id/header_email"
@@ -56,7 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ellipsize="end"
         android:fontFamily="@font/roboto"
         android:maxLines="1"
