--- a/app/src/main/res/drawable/calendar_btn_background.xml
+++ b/app/src/main/res/drawable/calendar_btn_background.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke
-        android:width="1dp"
-        android:color="#999999"/>
+    <!--<stroke-->
+        <!--android:width="1dp"-->
+        <!--android:color="#999999"/>-->
 
     <corners
         android:radius="2dp"/>
 
 
     <padding
+        android:bottom="4dp"
+        android:top="4dp"
         android:left="12dp"
         android:right="12dp"/>
 
