--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows"
     tools:context=".MainActivity">
-    
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <FrameLayout
             android:id="@+id/main_fragment_container"
@@ -40,17 +40,16 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/mainNavView"
-        app:headerLayout="@layout/nav_drawer_header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        app:itemTextColor="@color/black_textviews"
-        app:itemIconTint="#757575"
-        app:menu="@menu/drawermenu"
-        app:theme="@style/NavigationViewTheme"
-        android:fitsSystemWindows="@bool/fitsSystemWindows"
         android:layout_gravity="start"
-        ></android.support.design.widget.NavigationView>
+        android:background="@color/white"
+        android:fitsSystemWindows="@bool/fitsSystemWindows"
+        app:headerLayout="@layout/nav_drawer_header"
+        app:itemIconTint="#757575"
+        app:itemTextColor="@color/black_textviews"
+        app:menu="@menu/drawermenu"
+        app:theme="@style/NavigationViewTheme"></android.support.design.widget.NavigationView>
 
 
 </android.support.v4.widget.DrawerLayout>
