--- a/app/src/main/res/layout/item_view_choose_company.xml
+++ b/app/src/main/res/layout/item_view_choose_company.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/company_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
@@ -24,18 +24,18 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto"
         android:text="MSLM Company"
-        android:textColor="@color/black_textviews"
-        android:textSize="18sp"
+        android:textColor="#212121"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/company_image"
         app:layout_constraintStart_toEndOf="@+id/company_image"
         app:layout_constraintTop_toTopOf="@+id/company_image" />
 
     <ImageView
         android:id="@+id/checked"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -48,8 +48,8 @@
 
     <ImageView
         android:id="@+id/more_options_company_cardview"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_more_vert_grey_24dp"
@@ -61,11 +61,14 @@
         android:id="@+id/view1"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:alpha="0.07"
         android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
