--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_toolbar"></FrameLayout>
+            app:layout_constraintTop_toBottomOf="@id/main_toolbar" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -49,7 +49,5 @@
         app:itemIconTint="#757575"
         app:itemTextColor="@color/black_textviews"
         app:menu="@menu/drawermenu"
-        app:theme="@style/NavigationViewTheme"></android.support.design.widget.NavigationView>
-
-
+        app:theme="@style/NavigationViewTheme" />
 </android.support.v4.widget.DrawerLayout>
