--- a/app/src/main/res/layout/item_view_choose_company.xml
+++ b/app/src/main/res/layout/item_view_choose_company.xml
@@ -52,6 +52,7 @@
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_more_vert_grey_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
