--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,7 +2,9 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/roboto</item>
+        <item>@font/roboto_bold</item>
         <item>@font/roboto_light</item>
         <item>@font/roboto_medium</item>
+        <item>@font/roboto_mono_bold</item>
     </array>
 </resources>
