--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -10,16 +10,20 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="NavigationViewTheme" parent="AppTheme">
+    <style name="NavigationViewTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="textAppearanceListItem">@style/TextAppearance.AppCompat.Body2</item>
     </style>
 
-    <style name="MyEditTextTheme" >
+    <style name="MyEditTextTheme">
         <!-- Used for the bottom line when not selected / focused -->
         <item name="colorControlNormal">#38000000</item>
         <item name="android:textColor">#212121</item>
         <item name="android:textSize">16sp</item>
         <!-- colorControlActivated & colorControlHighlight use the colorAccent color by default -->
+    </style>
+
+    <style name="CustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
     </style>
 
 </resources>
