--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="grey_light">#72bbbbbb</color>
     <color name="activity_main_settings_blue_tv">#008bfd</color>
     <color name="tab_background_selected">#bfc4e3</color>
+    <color name="eColor">#eeeeee</color>
 </resources>
