--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -5,39 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.MyEventsFragment">
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/myEventsFragmentTabLayout"
-        android:background="@color/white"
-        app:tabIndicatorColor="@color/colorPrimary"
+    
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/CustomTabText"
-        android:elevation="4dp">
-
-        <android.support.design.widget.TabItem
-            android:id="@+id/upcomingEventsTab"
-            android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/myEventsFragmentTabLayout"
+            android:background="@color/white"
+            app:tabIndicatorColor="@color/colorPrimary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Предстоящие"
-            android:background="?attr/selectableItemBackground"
-            />
+            app:tabTextAppearance="@style/CustomTabText"
+            app:tabSelectedTextColor="#212121"
+            app:tabTextColor="#9e9e9e"
+            app:tabIndicatorHeight="3dp"
+            android:elevation="4dp">
 
-        <android.support.design.widget.TabItem
-            android:id="@+id/pastEventsTab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Прошедшие"
-            android:background="?attr/selectableItemBackground"/>
+            <android.support.design.widget.TabItem
+                android:id="@+id/upcomingEventsTab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Предстоящие"
+                android:background="?attr/selectableItemBackground"
+                />
 
-        <android.support.design.widget.TabItem
-            android:id="@+id/draftEventsTab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Черновик"
-            android:background="?attr/selectableItemBackground"/>
+            <android.support.design.widget.TabItem
+                android:id="@+id/pastEventsTab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Прошедшие"
+                android:background="?attr/selectableItemBackground"/>
 
-    </android.support.design.widget.TabLayout>
+            <android.support.design.widget.TabItem
+                android:id="@+id/draftEventsTab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Черновики"
+                android:background="?attr/selectableItemBackground"/>
+
+        </android.support.design.widget.TabLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -51,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_add_white_24dp"/>
