--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto_medium"
             android:text="Объем продаж"
-            android:textColor="@color/black_textviews"
+            android:textColor="#212121"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,11 +32,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/roboto_bold"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto_medium"
             android:text="63000 ₸"
-            android:textColor="@color/black_textviews"
-            android:textSize="38sp"
+            android:textColor="#212121"
+            android:textSize="48sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sales_title_tv" />
 
@@ -46,7 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/roboto"
             android:text="Подробно"
             android:textColor="#212121"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,18 +56,18 @@
         <com.budiyev.android.circularprogressbar.CircularProgressBar
             android:id="@+id/sold_out_progressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             app:animateProgress="true"
             app:backgroundStrokeColor="#e0e0e0"
-            app:backgroundStrokeWidth="2dp"
+            app:backgroundStrokeWidth="4dp"
             app:drawBackgroundStroke="true"
             app:foregroundStrokeCap="butt"
-            app:foregroundStrokeColor="@color/colorPrimary"
-            app:foregroundStrokeWidth="3dp"
+            app:foregroundStrokeColor="@color/green"
+            app:foregroundStrokeWidth="4dp"
             app:indeterminate="false"
             app:indeterminateMinimumAngle="45"
             app:indeterminateRotationAnimationDuration="1200"
@@ -82,11 +83,10 @@
             android:id="@+id/sold_out_innerCircle_percentage_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginStart="0dp"
+            android:fontFamily="@font/roboto"
             android:text="6%"
+            android:textColor="#212121"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/sold_out_progressBar"
             app:layout_constraintEnd_toEndOf="@+id/sold_out_progressBar"
             app:layout_constraintStart_toStartOf="@+id/sold_out_progressBar"
@@ -96,14 +96,14 @@
             android:id="@+id/sold_out_total_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto"
             android:text="Продано билетов"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/sold_out_progressBar"
+            android:textColor="#212121"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/sold_out_tickets_amount"
             app:layout_constraintStart_toEndOf="@+id/sold_out_progressBar"
             app:layout_constraintTop_toTopOf="@+id/sold_out_progressBar" />
 
@@ -112,12 +112,13 @@
             android:id="@+id/sold_out_tickets_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="2/30"
-            android:textSize="12sp"
+            android:fontFamily="@font/roboto"
+            android:text="2 / 30"
+            android:textColor="#666666"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/sold_out_progressBar"
             app:layout_constraintStart_toEndOf="@+id/sold_out_progressBar"
             app:layout_constraintTop_toBottomOf="@+id/sold_out_total_tv" />
@@ -126,8 +127,6 @@
             android:id="@+id/sold_out_tickets_recyclerView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="@+id/sold_out_total_tv"
             app:layout_constraintStart_toStartOf="@+id/sold_out_innerCircle_percentage_tv"
@@ -138,25 +137,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/roboto_medium"
             android:text="Итого Check-in"
-            android:textColor="@color/black_textviews"
+            android:textColor="#212121"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sold_out_tickets_recyclerView"
-            android:layout_marginStart="16dp" />
+            app:layout_constraintTop_toBottomOf="@id/sold_out_tickets_recyclerView" />
 
         <TextView
             android:id="@+id/total_check_in_price_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/roboto_bold"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/roboto_medium"
             android:text="15"
-            android:textColor="@color/black_textviews"
-            android:textSize="38sp"
+            android:textColor="#212121"
+            android:textSize="48sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/total_check_in_title_tv" />
 
@@ -166,7 +164,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/roboto"
             android:text="Подробно"
             android:textColor="#212121"
             app:layout_constraintStart_toStartOf="parent"
@@ -175,18 +174,18 @@
         <com.budiyev.android.circularprogressbar.CircularProgressBar
             android:id="@+id/check_in_progressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             app:animateProgress="true"
             app:backgroundStrokeColor="#e0e0e0"
-            app:backgroundStrokeWidth="2dp"
+            app:backgroundStrokeWidth="4dp"
             app:drawBackgroundStroke="true"
             app:foregroundStrokeCap="butt"
-            app:foregroundStrokeColor="@color/colorPrimary"
-            app:foregroundStrokeWidth="3dp"
+            app:foregroundStrokeColor="@color/green"
+            app:foregroundStrokeWidth="4dp"
             app:indeterminate="false"
             app:indeterminateMinimumAngle="45"
             app:indeterminateRotationAnimationDuration="1200"
@@ -202,11 +201,9 @@
             android:id="@+id/check_in_innerCircle_percentage_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginStart="0dp"
             android:text="6%"
+            android:textColor="#212121"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/check_in_progressBar"
             app:layout_constraintEnd_toEndOf="@+id/check_in_progressBar"
             app:layout_constraintStart_toStartOf="@+id/check_in_progressBar"
@@ -216,14 +213,14 @@
             android:id="@+id/check_in_total_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto"
-            android:text="Продано билетов"
+            android:text="Check-in"
             android:textColor="@android:color/black"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/check_in_progressBar"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/check_in_tickets_amount"
             app:layout_constraintStart_toEndOf="@+id/check_in_progressBar"
             app:layout_constraintTop_toTopOf="@+id/check_in_progressBar" />
 
@@ -231,14 +228,14 @@
             android:id="@+id/check_in_tickets_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="2/30"
-            android:textSize="12sp"
+            android:text="2 / 30"
+            android:textColor="#666666"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/check_in_progressBar"
-            app:layout_constraintStart_toEndOf="@+id/sold_out_progressBar"
+            app:layout_constraintStart_toEndOf="@+id/check_in_progressBar"
             app:layout_constraintTop_toBottomOf="@+id/check_in_total_tv" />
 
 
@@ -246,9 +243,7 @@
             android:id="@+id/check_in_tickets_recyclerView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="64dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="72dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/check_in_total_tv"
