--- a/app/src/main/res/layout/itemview_circle_progress_bars_tickets.xml
+++ b/app/src/main/res/layout/itemview_circle_progress_bars_tickets.xml
@@ -11,23 +11,23 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         app:animateProgress="true"
-        app:backgroundStrokeColor="#e0e0e0"
-        app:backgroundStrokeWidth="1dp"
+        app:backgroundStrokeWidth="4dp"
         app:drawBackgroundStroke="true"
         app:foregroundStrokeCap="butt"
-        app:foregroundStrokeColor="@color/colorPrimary"
-        app:foregroundStrokeWidth="2dp"
+        app:foregroundStrokeColor="@color/green"
+        app:foregroundStrokeWidth="4dp"
         app:indeterminate="false"
         app:indeterminateMinimumAngle="45"
         app:indeterminateRotationAnimationDuration="1200"
         app:indeterminateSweepAnimationDuration="600"
+        app:backgroundStrokeColor="#e0e0e0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:maximum="100"
         app:progress="10"
         app:progressAnimationDuration="100"
-        app:startAngle="270" />
+        app:startAngle="270"/>
 
     <TextView
         android:id="@+id/ticket_type_tv"
@@ -40,9 +40,11 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:text="Стандарт"
-        android:textColor="@color/black_textviews"
-        android:textSize="12sp"
+        android:textColor="#212121"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/sold_out_tickets_amount"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/circle_progressBar"
         app:layout_constraintTop_toTopOf="@+id/circle_progressBar" />
 
@@ -50,14 +52,18 @@
         android:id="@+id/sold_out_tickets_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
+        android:fontFamily="@font/roboto"
         android:text="2/30"
-        android:textSize="12sp"
+        android:textColor="#666666"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_progressBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/circle_progressBar"
         app:layout_constraintTop_toBottomOf="@+id/ticket_type_tv" />
 
@@ -66,7 +72,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5%"
-        android:textSize="10sp"
+        android:textColor="#212121"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_progressBar"
         app:layout_constraintEnd_toEndOf="@+id/circle_progressBar"
         app:layout_constraintStart_toStartOf="@+id/circle_progressBar"
