--- a/app/src/main/res/layout/item_view_create_tickets.xml
+++ b/app/src/main/res/layout/item_view_create_tickets.xml
@@ -11,10 +11,11 @@
         android:id="@+id/ticket_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
+        android:alpha="0.6"
         android:src="@drawable/ic_local_play_grey_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +25,12 @@
         android:id="@+id/ticket_type_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:fontFamily="@font/roboto"
         android:text="Студенческий"
         android:textColor="#212121"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/sold_out_ticket_amount_tv"
         app:layout_constraintStart_toEndOf="@+id/ticket_image"
         app:layout_constraintTop_toTopOf="@+id/ticket_image" />
@@ -38,10 +39,10 @@
         android:id="@+id/sold_out_ticket_amount_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:fontFamily="@font/roboto"
-        android:text="2 / 30 Продано"
+        android:text="2 / 30   Продано"
         android:textColor="#212121"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/ticket_image"
