--- a/app/src/main/res/layout/activity_paid_ticket.xml
+++ b/app/src/main/res/layout/activity_paid_ticket.xml
@@ -2,10 +2,9 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nested_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.FreeTicketActivity"
+    tools:context=".PaidTicketActivity"
     android:background="@color/white">
 
     <android.support.constraint.ConstraintLayout
@@ -17,7 +16,7 @@
         android:clickable="true">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/free_tickets_toolbar"
+            android:id="@+id/paid_tickets_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
@@ -40,7 +39,7 @@
             android:textColor="#212121"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/free_tickets_toolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/paid_tickets_toolbar" />
 
         <EditText
             android:id="@+id/ticket_name_edittext"
@@ -128,6 +127,94 @@
             app:layout_constraintTop_toBottomOf="@id/ticket_amount_tv" />
 
         <TextView
+            android:id="@+id/price_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/roboto"
+            android:text="Цена"
+            android:textColor="#212121"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ticket_amount_edittext" />
+
+        <EditText
+            android:id="@+id/ticket_price_edittext"
+            style="@style/MyEditTextTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/edt_bg_selector"
+            android:ellipsize="end"
+            android:hint="0"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
+            android:maxLines="1"
+            app:layout_constraintEnd_toStartOf="@+id/fees_constraint"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/price_tv" />
+
+        <TextView
+            android:id="@+id/fees_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Cборы"
+            android:fontFamily="@font/roboto"
+            android:textColor="#212121"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/ticket_amount_edittext"
+            tools:layout_editor_absoluteX="196dp" />
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/fees_constraint"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ticket_price_edittext"
+            app:layout_constraintTop_toBottomOf="@id/fees_tv">
+
+            <TextView
+                android:id="@+id/fees_spinner_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="8dp"
+                android:text="Absorbs"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/spinner_image_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/fees_spinner_tv"
+                app:layout_constraintStart_toEndOf="@+id/fees_spinner_tv"
+                app:layout_constraintTop_toTopOf="@+id/fees_spinner_tv"
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+
+            <View
+                android:id="@+id/divider_view2"
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#38000000"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+        <TextView
             android:id="@+id/start_sales_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -139,7 +226,7 @@
             android:textColor="#212121"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ticket_amount_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/fees_breakdown_tv" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/choose_sales_start_constraint"
@@ -527,12 +614,31 @@
 
         </android.support.constraint.ConstraintLayout>
 
+        <TextView
+            android:id="@+id/ticket_price_total_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/roboto"
+            android:text="Итого: 30к тг"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ticket_price_edittext" />
 
-
-
+        <TextView
+            android:id="@+id/fees_breakdown_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="Распределение сборов"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintEnd_toEndOf="@+id/fees_constraint"
+            app:layout_constraintStart_toStartOf="@+id/fees_constraint"
+            app:layout_constraintTop_toBottomOf="@+id/fees_constraint" />
 
 
     </android.support.constraint.ConstraintLayout>
+
 
 
 </android.support.v4.widget.NestedScrollView>
