--- a/app/src/main/res/layout/item_view_past_event_tickets.xml
+++ b/app/src/main/res/layout/item_view_past_event_tickets.xml
@@ -39,7 +39,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto"
         android:text="Сольный концерт Кайрата Нуртаса"
         android:textColor="#212121"
         app:layout_constraintStart_toEndOf="@+id/circle_progressBar_past_events"
