--- a/app/src/main/res/layout/itemview_circle_progress_bars_tickets.xml
+++ b/app/src/main/res/layout/itemview_circle_progress_bars_tickets.xml
@@ -31,11 +31,9 @@
 
     <TextView
         android:id="@+id/ticket_type_tv"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
@@ -43,27 +41,21 @@
         android:textColor="#212121"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/sold_out_tickets_amount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/circle_progressBar"
         app:layout_constraintTop_toTopOf="@+id/circle_progressBar" />
 
     <TextView
         android:id="@+id/sold_out_tickets_amount"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto"
         android:text="2/30"
         android:textColor="#666666"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_progressBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/circle_progressBar"
         app:layout_constraintTop_toBottomOf="@+id/ticket_type_tv" />
 
