--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,8 @@
         <!-- Used for the bottom line when not selected / focused -->
         <item name="colorControlNormal">#38000000</item>
         <item name="android:textColor">#212121</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingLeft">0dp</item>
         <!-- colorControlActivated & colorControlHighlight use the colorAccent color by default -->
     </style>
 
