--- a/app/src/main/res/drawable/calendar_btn_background.xml
+++ b/app/src/main/res/drawable/calendar_btn_background.xml
@@ -10,10 +10,10 @@
 
 
     <padding
-        android:bottom="4dp"
-        android:top="4dp"
         android:left="12dp"
-        android:right="12dp"/>
+        android:right="12dp"
+        android:top="12dp"
+        android:bottom="12dp"/>
 
     <solid android:color="@color/white"/>
 
