--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -71,7 +71,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_create_event_frag_rel_layout">
+                app:layout_constraintTop_toBottomOf="@+id/image_create_event_frag_rel_layout">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -124,7 +124,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_name">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_name">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -175,7 +175,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_company_name">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_company_name">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -231,7 +231,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_calendar_repeated">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_calendar_repeated">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -263,7 +263,7 @@
                         android:text="Начало"
                         android:textColor="#9e9e9e"
                         android:textSize="14sp"
-                        app:layout_constraintBottom_toTopOf="@id/start_date_btn_picker"
+                        app:layout_constraintBottom_toTopOf="@+id/start_date_btn_picker"
                         app:layout_constraintEnd_toStartOf="@+id/more_options_calendar"
                         app:layout_constraintStart_toEndOf="@+id/event_calendar_icon"
                         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -327,7 +327,7 @@
                         android:text="Конец"
                         android:textColor="#9e9e9e"
                         android:textSize="14sp"
-                        app:layout_constraintBottom_toTopOf="@id/end_date_button_picker"
+                        app:layout_constraintBottom_toTopOf="@+id/end_date_button_picker"
                         app:layout_constraintStart_toStartOf="@+id/start_date_btn_picker"
                         app:layout_constraintTop_toBottomOf="@+id/start_date_btn_picker"
                         app:layout_goneMarginBottom="16dp" />
@@ -393,7 +393,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_description">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_description">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -453,8 +453,8 @@
                         android:text="Как часто проходит?"
                         android:textColor="#9e9e9e"
                         android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="@id/repeated_tv"
-                        app:layout_constraintStart_toStartOf="@id/repeated_tv"
+                        app:layout_constraintEnd_toEndOf="@+id/repeated_tv"
+                        app:layout_constraintStart_toStartOf="@+id/repeated_tv"
                         app:layout_constraintTop_toBottomOf="@+id/repeated_tv" />
 
                     <Button
@@ -473,9 +473,9 @@
                         android:textAllCaps="false"
                         android:textColor="#212121"
                         android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="@id/how_often_tv"
-                        app:layout_constraintStart_toStartOf="@id/how_often_tv"
-                        app:layout_constraintTop_toBottomOf="@id/how_often_tv" />
+                        app:layout_constraintEnd_toEndOf="@+id/how_often_tv"
+                        app:layout_constraintStart_toStartOf="@+id/how_often_tv"
+                        app:layout_constraintTop_toBottomOf="@+id/how_often_tv" />
 
                     <TextView
                         android:id="@+id/choose_week_day_tv"
@@ -489,7 +489,7 @@
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="@+id/repeated_tv"
                         app:layout_constraintStart_toStartOf="@+id/repeated_tv"
-                        app:layout_constraintTop_toBottomOf="@id/how_often_btn" />
+                        app:layout_constraintTop_toBottomOf="@+id/how_often_btn" />
 
                     <Button
                         android:id="@+id/choose_week_day_btn"
@@ -507,7 +507,7 @@
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="@+id/how_often_btn"
                         app:layout_constraintStart_toStartOf="@+id/how_often_btn"
-                        app:layout_constraintTop_toBottomOf="@id/choose_week_day_tv" />
+                        app:layout_constraintTop_toBottomOf="@+id/choose_week_day_tv" />
 
                     <TextView
                         android:id="@+id/start_date_tv_c"
@@ -746,7 +746,7 @@
                     <!--android:paddingRight="8dp"-->
                     <!--android:text="Пт, 31 авг, 2018"-->
                     <!--android:textAllCaps="false"-->
-                    <!--app:layout_constraintTop_toBottomOf="@id/occurs_every_tv"-->
+                    <!--app:layout_constraintTop_toBottomOf="@+id/occurs_every_tv"-->
                     <!--/>-->
 
 
@@ -763,7 +763,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_calendar">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_calendar">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -804,7 +804,7 @@
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintBottom_toTopOf="@+id/location_name"
-                        app:layout_constraintStart_toEndOf="@id/event_location_icon"
+                        app:layout_constraintStart_toEndOf="@+id/event_location_icon"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_goneMarginBottom="16dp">
 
@@ -854,7 +854,9 @@
                         android:visibility="visible"
                         app:layout_constraintEnd_toStartOf="@+id/more_options_location"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/constraint_event_location" />
+                        app:layout_constraintTop_toBottomOf="@+id/constraint_event_location"
+                        android:paddingLeft="4dp"
+                        android:paddingStart="4dp" />
 
                     <EditText
                         android:id="@+id/location_address"
@@ -867,6 +869,8 @@
                         android:textSize="14sp"
                         android:theme="@style/MyEditTextTheme"
                         android:visibility="visible"
+                        android:paddingLeft="4dp"
+                        android:paddingStart="4dp"
                         app:layout_constraintEnd_toEndOf="@+id/location_name"
                         app:layout_constraintStart_toStartOf="@+id/location_name"
                         app:layout_constraintTop_toBottomOf="@+id/location_name" />
@@ -878,10 +882,12 @@
                         android:layout_marginBottom="24dp"
                         android:layout_marginTop="16dp"
                         android:visibility="visible"
+                        android:paddingLeft="4dp"
+                        android:paddingStart="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/location_address"
-                        app:layout_constraintStart_toStartOf="@id/location_address"
-                        app:layout_constraintTop_toBottomOf="@id/location_address">
+                        app:layout_constraintStart_toStartOf="@+id/location_address"
+                        app:layout_constraintTop_toBottomOf="@+id/location_address">
 
                         <EditText
                             android:id="@+id/location_city"
@@ -893,6 +899,8 @@
                             android:textSize="14sp"
                             android:theme="@style/MyEditTextTheme"
                             android:visibility="visible"
+                            android:paddingLeft="4dp"
+                            android:paddingStart="4dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -926,7 +934,7 @@
                 app:cardElevation="1.5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_location">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_location">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -965,8 +973,8 @@
                         android:layout_marginBottom="16dp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="@id/event_theme_tv"
-                        app:layout_constraintTop_toBottomOf="@id/event_theme_tv">
+                        app:layout_constraintStart_toStartOf="@+id/event_theme_tv"
+                        app:layout_constraintTop_toBottomOf="@+id/event_theme_tv">
 
                         <TextView
                             android:id="@+id/choose_theme_tv"
@@ -1047,8 +1055,8 @@
                         android:layout_marginBottom="16dp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="@id/event_tickets_tv"
-                        app:layout_constraintTop_toBottomOf="@id/event_tickets_tv">
+                        app:layout_constraintStart_toStartOf="@+id/event_tickets_tv"
+                        app:layout_constraintTop_toBottomOf="@+id/event_tickets_tv">
 
                         <TextView
                             android:id="@+id/add_event_tickets_tv"
@@ -1100,13 +1108,11 @@
                 android:id="@+id/cardview_event_privacy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 app:cardElevation="1.5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardview_event_tickets">
+                app:layout_constraintTop_toBottomOf="@+id/cardview_event_tickets">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -1116,8 +1122,8 @@
                         android:id="@+id/event_privacy_icon"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginLeft="16dp"
                         android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
                         android:src="@drawable/ic_lock_grey_24dp"
                         android:visibility="visible"
@@ -1128,8 +1134,8 @@
                         android:id="@+id/event_privacy_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="32dp"
                         android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/roboto"
                         android:text="Приватность"
@@ -1142,8 +1148,8 @@
                         android:id="@+id/constraint_event_privacy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
                         android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/event_privacy_tv"
                         app:layout_constraintTop_toBottomOf="@+id/event_privacy_tv">
@@ -1152,11 +1158,11 @@
                             android:id="@+id/event_privacy_choose_spinner_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
                             android:layout_marginTop="16dp"
-                            android:text="Публичное"
-                            android:fontFamily="@font/roboto"
+                            android:layout_marginBottom="16dp"
                             android:background="@null"
+                            android:fontFamily="@font/roboto"
+                            android:text="Публичное"
                             android:textColor="#212121"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -1166,8 +1172,8 @@
                             android:id="@+id/imageView6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
                             android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
                             android:src="@drawable/ic_arrow_drop_down_grey_24dp"
                             app:layout_constraintBottom_toBottomOf="@+id/event_privacy_choose_spinner_tv"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -1188,6 +1194,81 @@
 
 
                 </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardview_event_promocode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:cardElevation="1.5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardview_event_privacy">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/event_promocode_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="16dp"
+                        android:src="@drawable/ic_add_circle_outline_black_24dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/event_promocode_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="16dp"
+                        android:fontFamily="@font/roboto"
+                        android:text="Промокод"
+                        android:textColor="#9e9e9e"
+                        android:textSize="16sp"
+                        app:layout_constraintLeft_toRightOf="@id/event_promocode_icon"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <RelativeLayout
+                        android:id="@+id/relative_event_promocode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="@id/event_promocode_tv"
+                        app:layout_constraintTop_toBottomOf="@id/event_promocode_tv">
+
+                        <TextView
+                            android:id="@+id/promocode_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:background="@null"
+                            android:fontFamily="@font/roboto"
+                            android:text="Добавить промокод"
+                            android:textColor="#9e9e9e" />
+
+                        <ImageView
+                            android:id="@+id/promocode_tv_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@id/promocode_tv"
+                            android:src="@drawable/ic_arrow_drop_down_grey_24dp" />
+
+                    </RelativeLayout>
+
+                </android.support.constraint.ConstraintLayout>
+
 
             </android.support.v7.widget.CardView>
 
